fix: button: use configprovider focus visible styles (#301)
* fix: button: use configprovider focus visible styles

* chore: address pr feedback

--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -172,6 +172,12 @@
             background-color: var(--button-counter-active-background-color);
         }
     }
+
+    // Hides the browser default keyboard focus-visible styles.
+    // Use the ConfigProvider instead.
+    &:focus-visible {
+        outline: none;
+    }
 }
 
 .button-text-large {
